objects/Service__c.object
<CustomObject>
    <fields>
        <fullName>Alive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Container__c</fullName>
        <label>Container</label>
        <referenceTo>Container__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Downtime__c</fullName>
        <label>Last Downtime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Microservice_Endpoint__c</fullName>
        <label>Microservice Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Uptime__c</fullName>
        <formula>TEXT( 
FLOOR(NOW() -  Last_Downtime__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - Last_Downtime__c)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - Last_Downtime__c)*1440,60),0) 
) &amp;&quot; Minutes &quot; &amp; 
TEXT( 
ROUND(MOD((NOW() - Last_Downtime__c)*1440*60,60),0) 
) &amp;&quot; Seconds&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uptime</label>
        <type>Text</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>